# client/public/docs/openapi.json
@@ -684,6 +684,37 @@
         }
       }
     },
+    "/private/works/{workId}": {
+      "delete": {
+        "parameters": [
+          {
+            "name": "workId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "id": {
+                    "$ref": "#/components/schemas/Dto<\"work\">"
+                  }
+                },
+                "required": [
+                  "id"
+                ]
+              }
+            }
+          }
+        }
+      }
+    },
     "/private/works": {
       "get": {
         "parameters": [
@@ -739,6 +770,43 @@
               "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/CreateQuiz"
+                }
+              }
+            }
+          }
+        }
+      },
+      "delete": {
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "workId": {
+                    "anyOf": [
+                      {
+                        "$ref": "#/components/schemas/Branded<\"maybe\">"
+                      },
+                      {
+                        "$ref": "#/components/schemas/Dto<\"work\">"
+                      }
+                    ]
+                  }
+                },
+                "required": [
+                  "workId"
+                ]
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/WorkDto"
                 }
               }
             }
@@ -894,6 +962,17 @@
           }
         ]
       },
+      "Dto<\"work\">": {
+        "allOf": [
+          {
+            "type": "object",
+            "properties": {}
+          },
+          {
+            "type": "string"
+          }
+        ]
+      },
       "WorkDto": {
         "anyOf": [
           {
@@ -947,17 +1026,6 @@
               "choiceC",
               "choiceD"
             ]
-          }
-        ]
-      },
-      "Dto<\"work\">": {
-        "allOf": [
-          {
-            "type": "object",
-            "properties": {}
-          },
-          {
-            "type": "string"
           }
         ]
       },
