# server/api/private/works/index.ts
@@ -1,4 +1,5 @@
 import type { DefineMethods } from 'aspida';
+import type { MaybeId } from 'common/types/brandedId';
 import type { CreateQuiz, WorkDto } from 'common/types/work';
 
 export type Methods = DefineMethods<{
@@ -8,8 +9,17 @@ export type Methods = DefineMethods<{
     };
     resBody: WorkDto[];
   };
+
   post: {
     reqBody: { quiz: string; answer: string };
     resBody: CreateQuiz;
+  };
+
+  delete: {
+    reqBody: {
+      workId: MaybeId['work'];
+    };
+    status: 200;
+    resBody: WorkDto;
   };
 }>;
