# server/domain/work/workUseCase/workUseCase.ts
@@ -1,7 +1,11 @@
-import type { CreateQuiz } from 'common/types/work';
+import type { MaybeId } from 'common/types/brandedId';
+import type { UserDto } from 'common/types/user';
+import type { CreateQuiz, WorkDto } from 'common/types/work';
 import { transaction } from 'service/prismaClient';
 import { workMethod } from '../model/workMethods';
 import { workCommand } from '../repository/workCommands';
+import { workQuery } from '../repository/workQuery';
+import { toWorkDto } from '../service/toWorkDto';
 
 export const workUseCase = {
   create: async (quiz: string, answer: string): Promise<CreateQuiz> => {
@@ -13,4 +17,13 @@ export const workUseCase = {
       return CreateWork;
     });
   },
+  delete: (user: UserDto, workId: MaybeId['work']): Promise<WorkDto> =>
+    transaction('RepeatableRead', async (tx) => {
+      const work = await workQuery.findById(tx, workId);
+      const deleted = workMethod.delete(user, work);
+
+      await workCommand.delete(tx, deleted);
+
+      return toWorkDto(deleted.work);
+    }),
 };
